--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-fileupload": "^1.2.1",
     "nuxt": "^2.15.3",
     "p5": "^1.3.1",
+    "qrcode": "^1.5.0",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.0.1",
     "vue-use-sound": "^1.1.1",
