--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.9.1",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
+    "hammerjs": "^2.0.8",
     "nuxt": "^2.15.3",
     "p5": "^1.3.1",
     "qrcode": "^1.5.0",
